--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@ http://www.tooplate.com/view/2109-the-card
     <!-- Templatemo style -->
 	<script type="text/javascript" src="./js/web3.min.js"></script>
 	<script type="text/javascript" src="./js/ethereumjs-tx-1.3.3.min.js"></script>
-	<script src="http://code.jquery.com/jquery-latest.js "></script>
+	<script src="https://code.jquery.com/jquery-latest.js "></script>
 	<script type="text/javascript" src="./js/qrcode.js"></script>
 	<script>
 		$(document).ready(function () {
